<resources>
    <string name="app_name">Crescendo Pal</string>
    <string name="crescendo_pal">Crescendo Pal</string>
    <string name="cart">Cart</string>
    <string name="list_of_available_instruments">List of available instruments</string>
    <string name="add_instrument">Add Instrument</string>
    <string name="instrument_image">Instrument Image</string>
    <string name="instrument_name">Instrument Name</string>
    <string name="price">Price</string>
    <string name="short_description_goes_here">Short description goes here</string>
    <string name="seller_name" />
    <string name="add_to_cart">Add to Cart</string>
    <string name="rent_now">Rent Now</string>
    <string name="buy_now">Buy Now</string>
    <string name="instrument_description">Instrument Description</string>
    <string name="instrument_name_form">Instrument Name:</string>
    <string name="enter_instrument_name">Enter instrument name</string>
    <string name="description">Description:</string>
    <string name="describe_the_instrument">Describe the instrument</string>
    <string name="price_form">Price:</string>
    <string name="enter_price">Enter price</string>
    <string name="seller_name_form">Seller Name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="instrument_type_form">Instrument Type:</string>
    <string name="condition_form">Condition:</string>
    <string name="new_form">New</string>
    <string name="used_form">Used</string>
    <string name="rental_option_form">Rental Option:</string>
    <string name="upload_image_form">Upload Image:</string>
    <string name="camera_icon">Camera icon</string>
    <string name="tap_to_upload">Tap to upload</string>
    <string name="add_instrument_form">Add Instrument</string>
    <string name="checkout">Checkout</string>
    <string name="cartitems">cartItems</string>
    <string name="empty_cart">Your cart is empty!</string>
    <string name="order_placed">Order placed!</string>
    <string name="instrument_removed">Instrument removed from cart!</string>
    <string name="instrument_added_to_cart">Instrument added to cart!</string>"
    <string name="phone_number_form">Phone Number:</string>
    <string name="list_of_instruments">List of instruments</string>
    <string name="book_cover">book cover\n</string>
    <string name="list_of_books">list of books\n</string>
    <string name="add_book">Add Book</string>
    <string name="availability">Availability:</string>
    <string name="available_for_rent">Available for Rent</string>
    <string name="_123_456_7890">123-456-7890</string>
    <string name="sold_by_john">Sold by: John</string>
    <string name="seller">Seller:</string>
    <string name="_999">$999</string>
    <string name="this_is_a_digital_piano_with_88_keys_and_touch_sensitivity">This is a digital piano with 88 keys and touch sensitivity.</string>
    <string name="yamaha_keyboard">Yamaha Keyboard</string>
    <string name="my_hub">My Hub</string>
    <string name="where_musicians_connect_teach_and_trade">Where musicians connect, teach, and trade</string>
    <string name="hub_icon">Hub Icon</string>
    <string name="books_sheets">Books / Sheets</string>
    <string name="books_icon">Books Icon</string>
    <string name="instruments">Instruments</string>
    <string name="instrument_icon">Instrument Icon</string>
    <string name="app_logo">App Logo</string>
    <string name="textview">TextView</string>
    <string name="quantity_available">Quantity Available:</string>
    <string name="buy_book">Buy Book</string>
    <string name="uploader">Uploader:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="instrument">Instrument:</string>
    <string name="title">Title:</string>
    <string name="upload_image">Upload Image:</string>
    <string name="uploader_name">Uploader Name:</string>
    <string name="enter_available_quantity">Enter available quantity</string>
    <string name="quantity">Quantity:</string>
    ">

    <string-array name="instrument_types">
        <item>All</item>

        <item>Guitar</item>
        <item>Electric Guitar</item>
        <item>Bass Guitar</item>
        <item>Ukulele</item>
        <item>Mandolin</item>
        <item>Violin</item>
        <item>Viola</item>
        <item>Cello</item>
        <item>Double Bass</item>
        <item>Oud</item>
        <item>Qanun</item>
        <item>Rababa</item>
        <item>Buzuq</item>
        <item>Tanbur</item>
        <item>Santoor</item>
        <item>Kamanjah</item>
        <item>Rebab</item>
        <item>Banjo</item>
        <item>Harp</item>

        <item>Piano</item>
        <item>Digital Piano</item>
        <item>Keyboard</item>
        <item>Synthesizer</item>
        <item>Accordion</item>

        <item>Drums</item>
        <item>Snare Drum</item>
        <item>Cymbals</item>
        <item>Cajón</item>
        <item>Tabla</item>
        <item>Tabla Baladi</item>
        <item>Riq</item>
        <item>Daf</item>
        <item>Bendir</item>
        <item>Naqareh</item>
        <item>Zills / Sagat</item>
        <item>Darbuka</item>
        <item>Bongo Drums</item>
        <item>Triangle</item>
        <item>Marimba</item>
        <item>Xylophone</item>
        <item>Timpani</item>

        <item>Flute</item>
        <item>Clarinet</item>
        <item>Saxophone</item>
        <item>Oboe</item>
        <item>Bassoon</item>
        <item>Trumpet</item>
        <item>Trombone</item>
        <item>French Horn</item>
        <item>Tuba</item>
        <item>Recorder</item>
        <item>Bagpipes</item>
        <item>Ney</item>
        <item>Arghul</item>
        <item>Mizmar</item>
        <item>Zurna</item>
        <item>Kawala</item>
        <item>Duduk</item>

        <item>DJ Controller</item>
        <item>Voice / Vocals</item>
        <item>Studio Equipment</item>
        <item>Tarab Mic</item>
        <item>Mawwal Mic</item>

        <item>Harmonica</item>
        <item>Other</item>
    </string-array>

    <string-array name="condition_options">
        <item>All</item>
        <item>New</item>
        <item>Used</item>
    </string-array>

    <string-array name="difficulty_options">
        <item>All</item>
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

</resources>