<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bookImage"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/book_cover" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#666"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instrument"
            android:textColor="#666"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bookInstrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textColor="#666"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bookDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uploader"
            android:textColor="#666"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bookUploader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="#666"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bookPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textColor="#4CAF50"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity_available"
            android:textColor="#666"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bookQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnBuyBook"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/buy_book"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>