<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.AddBookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="140dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/crescendo_pal_logo_circ"
            android:contentDescription="@string/crescendo_pal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_book"
            android:textSize="26sp"
            android:textColor="#0F2E52"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Book Title:"
            android:textColor="#333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="12dp"
            android:hint="Enter title"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Instrument:"
            android:textColor="#333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerInstrument"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Difficulty:"
            android:textColor="#333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerDifficulty"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Downloadable:"
            android:textColor="#333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchDownloadable"
            android:layout_width="122dp"
            android:layout_height="49dp"
            android:layout_marginBottom="16dp"
            android:text="Yes / No"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Price:"
            android:textColor="#333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPrice"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="enter price"
            android:hint="@string/enter_price"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="#333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editQuantity"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="enter available quantity"
            android:hint="@string/enter_available_quantity"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uploader_name"
            android:textColor="#333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editUploader"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="enter your name"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/upload_image"
            android:textColor="#333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="200dp"
            android:layout_height="181dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/dashed_border"
                android:contentDescription="@string/crescendo_pal"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#55000000" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:contentDescription="@string/camera_icon"
                android:src="@drawable/baseline_add_a_photo_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="12dp"
                android:text="@string/tap_to_upload"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </FrameLayout>

        <Button
            android:id="@+id/btnAddBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:text="@string/add_book" />
    </LinearLayout>
</ScrollView>
